--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         <a href="#">Home</a>
         <a href="#">How it works</a>
         <a href="#pricing">Pricing</a>
-        <a href="#">Case studies</a>
         <a href="#">Contact</a>
       </nav>
-      <a href="#" class="bg-accent text-white px-5 py-2 rounded text-sm">Book fit call</a>
+      <a href="https://tidycal.com/hanslacida/paidsearchpod-fit-call" class="bg-accent text-white px-5 py-2 rounded text-sm">Book fit call</a>
     </div>
   </header>
 
@@ -41,19 +40,26 @@
   <section class="max-w-7xl mx-auto px-6 py-24">
     <div class="max-w-3xl">
       <h1 class="text-4xl md:text-5xl font-bold leading-tight">
-        Paid Search Pod for Performance Teams for Agencies
+        Paid Search Pods for Agencies Scaling Google Ads
       </h1>
+
+      <p class="mt-4 text-xl text-slate">
+        Senior led execution. No hiring. No churn risk.
+      </p>
+
       <p class="mt-6 text-lg text-slate">
-        Dedicated Google Ads execution pods.
-        Run by one senior owner.
-        Staffed with trained specialists.
+        We plug into your agency as a white label Google Ads delivery team.
+        One senior owner runs delivery end to end.
+        Specialists handle builds, QA, pacing, and reporting.
       </p>
+
       <p class="mt-4 text-lg text-slate">
-        You scale delivery.
-        You avoid hiring risk.
+        Trusted by founders and high growth agencies managing $100K to $1M plus in monthly ad spend. 
+        $300K plus in active monthly spend managed.
       </p>
+
       <div class="mt-8 flex gap-4">
-        <a href="#" class="bg-accent text-white px-6 py-3 rounded text-sm">Book a fit call</a>
+        <a href="https://tidycal.com/hanslacida/paidsearchpod-fit-call" class="bg-accent text-white px-6 py-3 rounded text-sm">Book a fit call</a>
         <a href="#pricing" class="border border-slate/30 px-6 py-3 rounded text-sm">View pricing</a>
       </div>
     </div>
@@ -63,54 +69,117 @@
   <section class="max-w-7xl mx-auto px-6 py-16 grid md:grid-cols-3 gap-10">
     <div>
       <h3 class="font-semibold">Single owner</h3>
-      <p class="mt-2 text-slate">One accountable senior strategist per pod. No handoffs.</p>
+      <p class="mt-2 text-slate">
+        One accountable senior strategist per pod.
+        Direct ownership from setup to reporting.
+      </p>
     </div>
     <div>
       <h3 class="font-semibold">Execution team</h3>
-      <p class="mt-2 text-slate">Juniors handle builds, QA, pacing, and reporting.</p>
+      <p class="mt-2 text-slate">
+        Specialists handle builds, QA, pacing, and weekly reporting.
+      </p>
     </div>
     <div>
       <h3 class="font-semibold">Agency first</h3>
-      <p class="mt-2 text-slate">White label delivery. Your brand stays front and center.</p>
+      <p class="mt-2 text-slate">
+        Fully white label.
+        Your agency stays client facing at all times.
+      </p>
+    </div>
+  </section>
+
+  <!-- Fit Section -->
+  <section class="max-w-7xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-12">
+    <div>
+      <h3 class="text-xl font-semibold">This is for</h3>
+      <ul class="mt-4 text-slate space-y-2">
+        <li>Agencies selling Google Ads retainers</li>
+        <li>Teams hitting delivery or hiring limits</li>
+        <li>Founders who want senior oversight without payroll risk</li>
+      </ul>
+    </div>
+    <div>
+      <h3 class="text-xl font-semibold">This is not for</h3>
+      <ul class="mt-4 text-slate space-y-2">
+        <li>Direct to client brands</li>
+        <li>Low budget or one off projects</li>
+        <li>Agencies looking to fully outsource strategy ownership</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Onboarding -->
+  <section class="bg-slate/5">
+    <div class="max-w-7xl mx-auto px-6 py-20">
+      <h2 class="text-3xl font-semibold">Simple onboarding</h2>
+      <div class="mt-8 grid md:grid-cols-3 gap-8">
+        <div>
+          <h4 class="font-semibold">1. Fit call</h4>
+          <p class="mt-2 text-slate">
+            Confirm pod size, account count, and spend range.
+          </p>
+        </div>
+        <div>
+          <h4 class="font-semibold">2. Access and handover</h4>
+          <p class="mt-2 text-slate">
+            Account access, SOPs, reporting alignment.
+          </p>
+        </div>
+        <div>
+          <h4 class="font-semibold">3. Go live</h4>
+          <p class="mt-2 text-slate">
+            Pod active within 3 to 5 business days.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Pricing -->
-  <section id="pricing" class="bg-slate/5">
+  <section id="pricing">
     <div class="max-w-7xl mx-auto px-6 py-24">
-      <div class="flex flex-col md:flex-row justify-between items-center gap-6">
-        <h2 class="text-3xl font-semibold">Pod pricing</h2>
-        <div class="flex items-center gap-3 text-sm">
-          <span class="text-slate">Standard</span>
-          <button id="toggleBtn" class="w-12 h-6 bg-slate/30 rounded-full relative">
-            <span id="toggleDot" class="w-5 h-5 bg-white rounded-full absolute left-1 top-0.5 transition"></span>
-          </button>
-          <span class="text-slate">Agency bundle</span>
-        </div>
-      </div>
+      <h2 class="text-3xl font-semibold">Pod pricing</h2>
 
       <div class="mt-12 grid md:grid-cols-3 gap-8">
         <div class="border border-slate/20 rounded p-8">
           <h3 class="font-semibold">Core Pod</h3>
           <p class="mt-2 text-slate">1 Senior owner. 1 Specialist.</p>
-          <p class="mt-6 text-3xl font-bold price" data-standard="3500" data-bundle="3200">$3,500</p>
+          <p class="mt-4 text-sm text-slate">
+            Example. $80K monthly spend.
+            CPL reduced by 28 percent within 60 days.
+          </p>
+          <p class="mt-6 text-3xl font-bold">$3,500</p>
           <p class="text-slate text-sm">per month</p>
         </div>
+
         <div class="border border-accent rounded p-8">
           <h3 class="font-semibold">Growth Pod</h3>
           <p class="mt-2 text-slate">1 Senior owner. 2 Specialists.</p>
-          <p class="mt-6 text-3xl font-bold price" data-standard="5000" data-bundle="4600">$5,000</p>
+          <p class="mt-4 text-sm text-slate">
+            Example. $250K monthly spend.
+            ROAS scaled from 3.1x to 5.4x.
+          </p>
+          <p class="mt-6 text-3xl font-bold">$5,000</p>
           <p class="text-slate text-sm">per month</p>
         </div>
+
         <div class="border border-slate/20 rounded p-8">
           <h3 class="font-semibold">Scale Pod</h3>
           <p class="mt-2 text-slate">1 Senior owner. 3 Specialists.</p>
-          <p class="mt-6 text-3xl font-bold price" data-standard="6500" data-bundle="5900">$6,500</p>
+          <p class="mt-4 text-sm text-slate">
+            Example. $700K monthly spend.
+            CPA stabilized across 18 active accounts.
+          </p>
+          <p class="mt-6 text-3xl font-bold">$6,500</p>
           <p class="text-slate text-sm">per month</p>
         </div>
       </div>
 
-      <p class="mt-8 text-sm text-slate">Bundle pricing applies to multi pod or long term engagements.</p>
+      <p class="mt-8 text-sm text-slate">
+        Pause, scale, or add pods as needed.
+        Most agencies start with one pod and scale after 30 to 60 days.
+      </p>
     </div>
   </section>
 
@@ -118,8 +187,13 @@
   <section class="max-w-7xl mx-auto px-6 py-24">
     <div class="bg-navy text-white rounded p-12">
       <h2 class="text-3xl font-semibold">Built for agency operators</h2>
-      <p class="mt-4 text-slate-200">Add delivery capacity in days. Remove it anytime.</p>
-      <a href="#" class="inline-block mt-8 bg-white text-navy px-6 py-3 rounded text-sm">Book a fit call</a>
+      <p class="mt-4 text-slate-200">
+        Add Google Ads delivery capacity in days.
+        Remove it anytime.
+      </p>
+      <a href="https://tidycal.com/hanslacida/paidsearchpod-fit-call" class="inline-block mt-8 bg-white text-navy px-6 py-3 rounded text-sm">
+        Book a fit call
+      </a>
     </div>
   </section>
 
@@ -127,25 +201,8 @@
   <footer class="border-t border-slate/20">
     <div class="max-w-7xl mx-auto px-6 py-8 text-sm text-slate flex flex-col md:flex-row justify-between gap-2">
       <p>© 2025 Paid Search Pod</p>
-      <p>Powered by KaizenStrategy Solutions LLC</p>
     </div>
   </footer>
-
-  <script>
-    const toggleBtn = document.getElementById('toggleBtn');
-    const toggleDot = document.getElementById('toggleDot');
-    const prices = document.querySelectorAll('.price');
-    let bundled = false;
-
-    toggleBtn.addEventListener('click', () => {
-      bundled = !bundled;
-      toggleDot.style.left = bundled ? '1.75rem' : '0.25rem';
-      prices.forEach(price => {
-        const value = bundled ? price.dataset.bundle : price.dataset.standard;
-        price.textContent = `$${Number(value).toLocaleString()}`;
-      });
-    });
-  </script>
 
 </body>
 </html>
