--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paid Search Pod | Performance Teams for Agencies</title>
+
+  <title>Paid Search Pod | Google Ads & Paid Media Pods for Agencies</title>
+
+  <meta name="description" content="Paid Search Pod provides senior led Google Ads and Meta Ads execution pods for agencies. White label paid search and paid media delivery run by experienced media buyers. Scale ad spend without hiring risk." />
+
+  <meta name="keywords" content="paid search pod, google ads agency support, google ads specialist for agencies, media buyer operator, paid media operator, meta ads operator, white label google ads, agency ppc execution, paid search team for agencies" />
+
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Paid Search Pod" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Paid Search Pod | Senior Led Google Ads Execution for Agencies" />
+  <meta property="og:description" content="Senior led Google Ads and Meta Ads delivery pods for agencies. White label paid search execution. Scale faster without hiring." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://paidsearchpod.com" />
+  <meta property="og:site_name" content="Paid Search Pod" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Paid Search Pod | Paid Search & Paid Media Pods for Agencies" />
+  <meta name="twitter:description" content="White label Google Ads and Meta Ads execution pods for agencies. Senior owned delivery. No hiring risk." />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -19,6 +40,7 @@
     }
   </script>
 </head>
+
 
 <body class="bg-white text-navy font-sans">
 
