--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <nav class="hidden md:flex gap-8 text-sm text-slate">
         <a href="#">Home</a>
         <a href="#">How it works</a>
+        <a href="/enterprise">For Enterprise</a>
         <a href="#pricing">Pricing</a>
         <a href="#">Contact</a>
       </nav>
